buildscript {
  configurations.classpath {
    resolutionStrategy.activateDependencyLocking()
  }
}

plugins {
  id 'checkstyle'
  id 'java'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'org.springframework.boot' version '2.7.1'
  id 'se.solrike.sonarlint' version '1.0.0-beta.4'
//  id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.example'
version = '1.0.0'
sourceCompatibility = JavaVersion.VERSION_17

// dependencyLocking {
//   lockAllConfigurations()
// }

checkstyle {
  toolVersion = '10.3'
  checkstyleMain.enabled = false
}

sonarlint {
  sonarlintMain.enabled = false
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  annotationProcessor('org.projectlombok:lombok')
  annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
  compileOnly('org.projectlombok:lombok')
  developmentOnly('org.springframework.boot:spring-boot-devtools')
  sonarlintPlugins('org.sonarsource.java:sonar-java-plugin:7.13.0.29990')

  // Manipulador de .env.
  implementation('io.github.cdimascio:dotenv-java:2.2.4')
  
  implementation('me.paulschwarz:spring-dotenv:2.4.1')
  implementation('org.springframework.boot:spring-boot-starter-oauth2-resource-server')
  implementation('org.springframework.boot:spring-boot-starter-security')
  implementation('org.springframework.boot:spring-boot-starter-web')
  implementation('com.squareup.okhttp3:okhttp:5.0.0-alpha.11')
  implementation 'org.postgresql:postgresql:42.3.1'
  implementation 'io.github.cdimascio:java-dotenv:5.2.2'
  implementation 'javax.persistence:javax.persistence-api:2.2'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.7'
  implementation 'org.hibernate:hibernate-core'

  // https://mvnrepository.com/artifact/org.json/json
  implementation group: 'org.json', name: 'json', version: '20230227'

  // https://github.com/auth0/Auth0-java/tree/master
  implementation 'com.auth0:auth0:2.2.0'

  implementation 'com.auth0:java-jwt:3.18.1'

  // https://mvnrepository.com/artifact/org.flywaydb/flyway-core
  implementation group: 'org.flywaydb', name: 'flyway-core'

  testImplementation('org.springframework.boot:spring-boot-starter-test')
  testImplementation('org.springframework.security:spring-security-test')
  
  // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
  testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.7'

  // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
  // Habilita swagger. Para ingresar a la GUI: /swagger-ui/index.html.
  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'

  implementation 'com.fasterxml.jackson.core:jackson-databind'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

}

tasks.named('test') {
  useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': 'com.example.helloworld.HelloWorldApplication'
    }
}